fix: results list overflowing out of results box

--- a/course-selector/src/components/Results.css
+++ b/course-selector/src/components/Results.css
@@ -1,3 +1,9 @@
 #results {
     padding: 1%;
+    display: flex;
+    flex-direction: column;
+}
+
+#courseResultsList {
+    overflow-y: scroll;
 }
